--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -1,3 +1,15 @@
 .htmx-request .htmx-request-hide {
   display: none;
 }
+
+ul {
+  list-style-type: none;
+}
+
+h2,
+h3 {
+  margin-bottom: 0;
+  margin-top: 0.5em;
+  font-size: unset;
+  line-height: unset;
+}
