--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -6,8 +6,8 @@ ul {
   list-style-type: none;
 }
 
-h2,
-h3 {
+#arbre-filière h2,
+#arbre-filière h3 {
   margin-bottom: 0;
   margin-top: 0.5em;
   font-size: unset;
