--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -1,9 +1,5 @@
-.htmx-request .htmx-request-hide {
-  display: none;
-}
-
-ul {
-  list-style-type: none;
+* {
+  scrollbar-width: thin;
 }
 
 #arbre-filière h2,
